# buildSys

./: CMakeLists.txt
A/: CMakeLists.txt  file.cpp  file.hpp
B/: main.cpp  main.h
C/: preparing.py
doc/: doxygen.conf
